Email unique condition added

--- a/module/Employee/view/employee/employee/index.phtml
+++ b/module/Employee/view/employee/employee/index.phtml
@@ -9,7 +9,7 @@ $this->headTitle($title);
 <?php $this->inlineScript()->appendFile('../../js/employee.js'); ?>
 <form id="employeeform" name="employeeform" method="post">
 <div><?php if(isset($msg) && $msg!=''){ echo "<span style='color:red;'>".$msg."</span>"; } ?></div>
-<div>Filter Data : <input type="text" id="search" name="search" value="<?php if(isset($search) && $search!=''){ echo $search; } ?>" />&nbsp;<input type="button" value="Search" onclick="filterData();" />&nbsp;<input type="button" value="Clear Search" onclick="document.getElementById('search').value='';" /></div>
+<div>Filter Data : <input type="text" id="search" name="search" value="<?php if(isset($search) && $search!=''){ echo $search; } ?>" />&nbsp;<input type="button" value="Search" onclick="filterData();" />&nbsp;<input type="button" value="Clear Search" onclick="document.getElementById('search').value='';document.employeeform.submit();" /></div>
 <table class="table">
 <tr>
     <th><a href="javascript:void(0);" onclick="sortData('employee_id');">Employee ID</a></th>
